change to multi-module maven configuration